## Process this file with automake to produce Makefile.in

PFDS_ALL_TESTS	= \
	test-pfds-bbtree.sps		\
	test-pfds-deques.sps		\
	test-pfds-dlists.sps		\
	test-pfds-fingertrees.sps	\
	test-pfds-heaps.sps		\
	test-pfds-psqs.sps

EXTRA_DIST	= $(PFDS_ALL_TESTS)
TESTS		= $(PFDS_ALL_TESTS)

include $(top_srcdir)/meta/makefiles/tests.am

### end of file
